--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport:" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,700i,900i&display=swap" rel="stylesheet">
     <title>TAHAROA</title>
     <script src="https://kit.fontawesome.com/9a85f6e560.js"></script>
     <link rel="stylesheet" href="assets/css/main.css">
@@ -38,35 +39,112 @@
 
   <header>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner ">
+    <div class="carousel-inner">
       <div class="carousel-item active">
-        <img  src="assets/images/slider.jpg" class="d-block  " alt="...">
+        <img  src="assets/images/chicas3.jpg" class="d-block  " alt="...">
       </div>
       <div class="carousel-item">
-        <img  src="assets/images/slider.jpg" class="d-block " alt="...">
+        <img  src="assets/images/baile.jpg" class="d-block " alt="...">
       </div>
       <div class="carousel-item">
-        <img  src="assets/images/slider.jpg" class="d-block  " alt="...">
+        <img  src="assets/images/chicas.jpg" class="d-block  " alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
+      <span class="sr-only">Anterior</span>
     </a>
     <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
+      <span class="sr-only">Siguiente</span>
     </a>
   </div>
   </header>
-
+<main>
   <article class="About">
-    <h1>TAHAROA Nuestra Historia</h1>
+    <div class="container">
+      <h1>TAHAROA Nuestra Historia</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
 
+    <div class="About__button container">
+      <button type="button" name="button">Ver mas</button>
+    </div>
   </article>
 
+  <section class="Instructora container">
+    <h2>Nuestras Instructoras</h2>
+    <div class="instructora__sol">
+      <div class="Instructora__sole">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="Instructora__sole--btn">
+          <button type="button" name="button">Ver mas</button>
+        </div>
+      </div>
+      <div class="Instructora__kat">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="Instructora__kat--btn">
+          <button type="button" name="button">Ver mas</button>
+        </div>
+      </div>
+      <div class="Instructora__Van">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="Instructora__Van--btn">
+          <button type="button" name="button">Ver mas</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="PhotographyGalery">
+    <div class="container">
+      <h3>GALERIA FOTOGRAFICA</h3>
+      <div class="row py-3">
+        <div class="col-4">
+
+          <img src="assets/images/pareja.jpg" alt="">
+        </div>
+        <div class="col-4">
+
+          <img src="assets/images/baile.jpg" alt="">
+        </div>
+        <div class="col-4">
+
+          <img src="assets/images/chicas.jpg" alt="">
+        </div>
+      </div>
+      <div class="row py-3">
+        <div class="col-4">
+
+          <img src="assets/images/chicas2.jpg" alt="">
+        </div>
+        <div class="col-4">
+
+          <img src="assets/images/chicas3.jpg" alt="">
+        </div>
+        <div class="col-4">
+
+          <img src="assets/images/baile.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container">
+    <h4>Nuestras clases</h4>
+    <div class="cursos">
 
 
+    <div class="cursos__imgs">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+    <div class="cursos__contents">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+    </div>
+  </section>
+
+</main>
 
 
 
