creacion pagina about.html

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto mr-5">
         <li class="nav-item active">
-          <a class="nav-link" href="#"> Inicio <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link s" href="#">Nosotras</a>
+          <a class="nav-link s" href="About.html" target="_blank">Nosotras</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Instructoras</a>
@@ -68,7 +68,7 @@
     </div>
 
     <div class="About__button container">
-      <button type="button" name="button">Ver mas</button>
+    <a href="about.html" target="_blank"> <button  type="button" name="button">Ver mas</button></a>
     </div>
   </article>
 
@@ -158,7 +158,7 @@
 
   <footer class="footer">
 
-              
+
   </footer>
 
 </main>
