creacion boton section about

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light ">
-    <a class="navbar-brand ml-5" href="#">TAHAROA</a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand ml-5 tittle__logo  " href="index.html">TAHAROA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto mr-5">
+      <ul class="navbar-nav ml-auto mr-5 ">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
+          <a class="nav-link tittle__links" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link s" href="About.html" target="_blank">Nosotras</a>
+          <a class="nav-link tittle__links" href="About.html" target="_blank">Nosotras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Instructoras</a>
+          <a class="nav-link tittle__links" href="#">Instructoras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Clases</a>
+          <a class="nav-link tittle__links" href="#">Clases</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link tittle__links" href="#">Contacto</a>
         </li>
       </ul>
     </div>
@@ -63,12 +63,12 @@
 <main>
   <article class="About">
     <div class="container">
-      <h1>TAHAROA Nuestra Historia</h1>
+      <h1>TAHAROA   Nuestra Historia</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
     <div class="About__button container">
-    <a href="about.html" target="_blank"> <button  type="button" name="button">Ver mas</button></a>
+    <a href="about.html" target="_blank"> <button class="button2"  type="button " name="button">Ver mas</button></a>
     </div>
   </article>
 
