--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
   <header>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item active ">
         <img  src="assets/images/chicas3.jpg" class="d-block  " alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item ">
         <img  src="assets/images/baile.jpg" class="d-block " alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item ">
         <img  src="assets/images/chicas.jpg" class="d-block  " alt="...">
       </div>
     </div>
@@ -68,36 +68,52 @@
     </div>
 
     <div class="About__button container">
-    <a href="about.html" target="_blank"> <button class="button2"  type="button " name="button">Ver mas</button></a>
+    <a href="about.html" target="_blank"> <button class="button2"  type="button " name="button">Ir a nuestra historia</button></a>
     </div>
   </article>
 
-  <section class="Instructora container">
+  <section class="Instructora  ">
     <h2>Nuestras Instructoras</h2>
-    <div class="instructora__sol">
-      <div class="Instructora__sole">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="Instructora__sole--btn">
-          <button type="button" name="button">Ver mas</button>
-        </div>
-      </div>
-      <div class="Instructora__kat">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="Instructora__kat--btn">
-          <button type="button" name="button">Ver mas</button>
-        </div>
-      </div>
-      <div class="Instructora__Van">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="Instructora__Van--btn">
-          <button type="button" name="button">Ver mas</button>
-        </div>
-      </div>
+<div class=" container">
+    <div class="card-deck pt-3 pb-3 ">
+  <div class="card">
+    <img src="assets/images/solecard2.jpg" class="card-img-top " alt="...">
+    <div class="card-body">
+      <h5 class="card-title text-center">Soledad</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
+    <div class="card-footer text-center">
+        <a href="#"><button type="button" name="button">Mi Historia </button> </a>
+    </div>
+  </div>
+  <div class="card">
+    <img src="assets/images/solecard2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title text-center">Katya</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer text-center">
+        <a href="#"> <button type="button" name="button">Mi Historia </button> </a>
+    </div>
+  </div>
+  <div class="card">
+    <img src="assets/images/solecard2.jpg" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title text-center">Vannesa</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer text-center ">
+      <a href="#"><button type="button" name="button">Mi Historia </button> </a>
+    </div>
+  </div>
+</div>
+</div>
+
+
   </section>
 
   <section class="PhotographyGalery">
-    <div class="container">
+    <div class="container py-5">
       <h3>GALERIA FOTOGRAFICA</h3>
       <div class="row py-3">
         <div class="col-4">
@@ -130,38 +146,40 @@
     </div>
   </section>
 
-  <section class="container">
+  <section class="cursos text-center py-5">
     <h4>Nuestras clases</h4>
-    <div class="cursos">
 
+      <div class="container my-5">
+        <div class="row">
 
-    <div class="cursos__imgs">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-    </div>
-    <div class="cursos__contents">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-    </div>
-    </div>
-  </section>
+            <div class="col-md-6 cursos__imgs">
+                <img src="assets/images/solecard.jpg" alt="" class="img-fluid">
+            </div>
 
-  <section id="contac" class="formulario text-center">
+            <div class="col-md-6">
+              <div class="cursos__contents">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+              </div>
+            </div>
 
-    <div class="typeform-widget" data-url="https://marco337077.typeform.com/to/RLfkl1" style="width: 100%; height: 500px;">
-
-    </div>
-     <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
-     </script>
-     <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">
         </div>
-
+      </div>
   </section>
 
+  <section class="form">
+
+  <div class="form__contacto ">
+     <button class="button1 " type="button" name="button"> <a href="Contacto.html"></a>Contactanos</button>
+  </div>
+
+  </section>
+</main>
   <footer class="footer">
 
 
   </footer>
 
-</main>
+
 
 
 
