modificacion con border-radius de galeria fotografica

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer text-center">
-        <a href="#"><button type="button" name="button">Mi Historia </button> </a>
+        <a href="#"><button class="button3" type="button" name="button">Visita mi perfil</button> </a>
     </div>
   </div>
   <div class="card">
@@ -93,7 +93,7 @@
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
     <div class="card-footer text-center">
-        <a href="#"> <button type="button" name="button">Mi Historia </button> </a>
+        <a href="#"> <button class="button3" type="button" name="button">Visita mi perfil </button> </a>
     </div>
   </div>
   <div class="card">
@@ -103,7 +103,7 @@
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
     <div class="card-footer text-center ">
-      <a href="#"><button type="button" name="button">Mi Historia </button> </a>
+      <a href="#"><button class="button3" type="button" name="button">Visita mi perfil</button> </a>
     </div>
   </div>
 </div>
@@ -116,29 +116,29 @@
     <div class="container py-5">
       <h3>GALERIA FOTOGRAFICA</h3>
       <div class="row py-3">
-        <div class="col-4">
+        <div class="col-md-4 PhotographyGalery__presentaciones">
 
           <img src="assets/images/pareja.jpg" alt="">
         </div>
-        <div class="col-4">
+        <div class="col-md-4 PhotographyGalery__presentaciones">
 
           <img src="assets/images/baile.jpg" alt="">
         </div>
-        <div class="col-4">
+        <div class="col-md-4 PhotographyGalery__presentaciones">
 
           <img src="assets/images/chicas.jpg" alt="">
         </div>
       </div>
       <div class="row py-3">
-        <div class="col-4">
+        <div class="col-md-4 PhotographyGalery__presentaciones">
 
           <img src="assets/images/chicas2.jpg" alt="">
         </div>
-        <div class="col-4">
+        <div class="col-md-4 PhotographyGalery__presentaciones">
 
           <img src="assets/images/chicas3.jpg" alt="">
         </div>
-        <div class="col-4">
+        <div class="col-md-4 PhotographyGalery__presentaciones">
 
           <img src="assets/images/baile.jpg" alt="">
         </div>
