modificacion del footer

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand ml-5 tittle__logo  " href="index.html">TAHAROA</a>
+    <nav class="navbar navbar-expand-lg navbar-light   ">
+    <a class="navbar-brand ml-5 tittle__logo scale-in-left  " href="index.html">TAHAROA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -31,7 +31,7 @@
           <a class="nav-link tittle__links" href="#">Clases</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link tittle__links" href="#">Contacto</a>
+        <a class="nav-link tittle__links" href="Contacto.html">Contacto</a>
         </li>
       </ul>
     </div>
@@ -63,7 +63,7 @@
 <main>
   <article class="About">
     <div class="container">
-      <h1>TAHAROA   Nuestra Historia</h1>
+      <h1 class="scale-in-left">TAHAROA   Nuestra Historia</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
@@ -169,49 +169,18 @@
   <section class="form">
 
   <div class="form__contacto ">
-     <button class="button1 " type="button" name="button"> <a href="Contacto.html"></a>Contactanos</button>
+    <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
   </div>
 
   </section>
 </main>
   <footer class="footer">
-
+    <div class="footer__icon">
+      <i class="fab fa-instagram fa-3x footer__icon--color "></i>
+      <p>Visita nuestro Insta</p>
+    </div>
 
   </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script
