agregando enlace al footer

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 </main>
   <footer class="footer">
     <div class="footer__icon">
-      <i class="fab fa-instagram fa-3x footer__icon--color "></i>
+      <a href="https://www.instagram.com/taharoa_/" target="_blank"><i class="fab fa-instagram fa-3x footer__icon--color "></i></a>
       <p>Visita nuestro Insta</p>
     </div>
 
