creacion contenido pagina about

--- a/Clases.html
+++ b/Clases.html
@@ -81,7 +81,10 @@
   </section>
 
   <footer class="footer">
-
+    <div class="footer__icon">
+      <a href="https://www.instagram.com/taharoa_/" target="_blank"><i class="fab fa-instagram fa-3x footer__icon--color "></i></a>
+      <p>Visita nuestro Insta</p>
+    </div>
 
   </footer>
 
