--- a/About.html
+++ b/About.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport:" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,700i,900i&display=swap" rel="stylesheet">
-    <title>TAHAROA</title>
-    <script src="https://kit.fontawesome.com/9a85f6e560.js"></script>
-    <link rel="stylesheet" href="assets/css/main.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport:" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400i,700i,900i&display=swap" rel="stylesheet">
+  <title>TAHAROA</title>
+  <script src="https://kit.fontawesome.com/9a85f6e560.js"></script>
+  <link rel="stylesheet" href="assets/css/main.css">
+</head>
+<body>
 
-    <nav class="navbar navbar-expand-lg navbar-light   ">
+  <nav class="navbar navbar-expand-lg navbar-light   ">
     <a class="navbar-brand ml-5 tittle__logo scale-in-left  " href="index.html">TAHAROA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
           <a class="nav-link tittle__links" href="#">Clases</a>
         </li>
         <li class="nav-item">
-        <a class="nav-link tittle__links" href="Contacto.html">Contacto</a>
+          <a class="nav-link tittle__links" href="Contacto.html">Contacto</a>
         </li>
       </ul>
     </div>
@@ -39,53 +39,62 @@
 
   <header>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active ">
-        <img  src="assets/images/chicas3.jpg" class="d-block  " alt="...">
+      <div class="carousel-inner">
+        <div class="carousel-item active ">
+          <img  src="assets/images/chicas3.jpg" class="d-block  " alt="...">
+        </div>
+        <div class="carousel-item ">
+          <img  src="assets/images/baile.jpg" class="d-block " alt="...">
+        </div>
+        <div class="carousel-item ">
+          <img  src="assets/images/chicas.jpg" class="d-block  " alt="...">
+        </div>
       </div>
-      <div class="carousel-item ">
-        <img  src="assets/images/baile.jpg" class="d-block " alt="...">
-      </div>
-      <div class="carousel-item ">
-        <img  src="assets/images/chicas.jpg" class="d-block  " alt="...">
-      </div>
+      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Siguiente</span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Anterior</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Siguiente</span>
-    </a>
-  </div>
   </header>
 
-   <section class="history">
+  <section class="history">
+    <div class="history__group container">
+      <h5>Nuestra historia.</h5>
+      <div class="row">
+        <div class="col-md-6">
+          <p>Taharoa, es un grupo que se crea el año 1999, con la finalidad de dar a conocer la música y danza de la cultura Chilena “Rapanui”, de la Isla de Pascua, perteneciente a la a la V Región de Valparaíso, como una agrupación folclórica con el objetivo de desarrollar muestras de la cultura, trajes, baile, música, costumbres e historia, en la Región de Santiago, como muestra de la danza tradicional folclórica chilena, así dar a conocer y proteger la cultura Rapanui.  En la cual se realiza una recuperación y divulgación masiva a nivel Metropolitano y otras regiones de la identidad cultural de la Isla de Pascua.
+            Taharoa nace como un grupo de investigación cultural, alusivo a la cultura isleña, los integrantes viajan y recorren en primera instancia la Isla Juan Fernández y posteriormente la Isla de Pascua, para aprender sus bailes, cultura y tradiciones.  Posterior a la investigación para difundir esta cultura se crea el grupo de baile, cuyos ensayos se realizan en Liceo Ignacio Carrera Pinto de la comuna de Santiago. El nombre del grupo “Taharoa”, se puso en honor al Sr. Juan Bautista Laharoa, quien en esos años ayudo al grupo a la recopilación histórica, cuyo apellido era en realidad Taharoa, pero el registro civil lo inscribió como Laharoa. Gran personaje en nuestros inicios, quien apoyó y orientó al grupo con la cultura Rapanui. Ya que se considera muy importante rescatar la cultura de nuestro país,  para concientizar a las personas que ven las presentaciones, de que todos somos responsables de continuar con nuestras tradiciones del patrimonio cultural de Chile.</p>
+          </div>
+          <div class="col-md-6">
+            <p>
+            Pronto el grupo comienza a funcionar y tener presentaciones, los mismo integrantes comienzan a confeccionar el vestuario, el que es hecho a mano, el grupo es integrado por damas y varones, que fomentan la cultura cuando no habían muchos grupos que traspasaban la identidad cultural del pueblo Rapanui, para posteriormente seguir creciendo en la parte musical, integrando músicos, para entregar a toda la comunidad una mejor muestra del lenguaje y tradiciones folclórica, a través de las coreografías y música en vivo.
+            El grupo comienza a crecer y tener presentaciones no solo en la comuna de Santiago, sino también en otras comunas, invitaciones a Festivales de Muestras Folclóricas Nacionales, como en la Serena, Maipú, centros culturales de diferentes comunas, presentaciones a beneficios, entre otros, permitiéndonos crear lazos con otros grupos folclóricos, intercambiando diferentes trabajos a nivel socio-cultural, manteniendo una larga trayectoria de aprendizaje y traspaso cultural desde 1999 a la fecha (2019).
 
-     
-   </section>
+            A través del baile se da a conocer al público, las tradiciones e historia de las diferentes tribus que habitaban la Isla de Pascua y la importancia que tenían en su cultura y jerarquía, como competencias, esculturas y creencias que se trasforman en tradiciones, traspasando estas historias a las personas que ven estas presentaciones, como así la muestra del vestuario que se utilizaba en la cultura isleña y representaciones de su historia a través del canto e instrumentos.</p>
+          </div>
 
+        </div>
+      </div>
 
-
-
-
-
-
-
-
-
+  </section>
 
   <section class="form">
 
-  <div class="form__contacto ">
-    <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
-  </div>
+    <div class="form__contacto ">
+      <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+    </div>
 
   </section>
 
   <footer class="footer">
-
+    <div class="footer__icon">
+      <a href="https://www.instagram.com/taharoa_/" target="_blank"><i class="fab fa-instagram fa-3x footer__icon--color "></i></a>
+      <p>Visita nuestro Insta</p>
+    </div>
 
   </footer>
 
@@ -124,17 +133,17 @@
 
 
 
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
 
-    <!--  popper  -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <!--  popper  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 
-    <!--  bootstrap js  -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!--  bootstrap js  -->
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-    <script src="assets/js/script.js"></script>
-  </body>
+  <script src="assets/js/script.js"></script>
+</body>
 </html>
