--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="container py-5">
       <h3>GALERIA FOTOGRAFICA</h3>
       <div class="row py-3">
-        <div class="col-md-4 PhotographyGalery__presentaciones">
+        <div class="col-md-4 PhotographyGalery__presentaciones ">
 
           <img src="assets/images/pareja.jpg" alt="">
         </div>
@@ -169,6 +169,7 @@
   <section class="form">
 
   <div class="form__contacto ">
+    <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
     <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
   </div>
 
