--- a/About.html
+++ b/About.html
@@ -22,13 +22,13 @@
           <a class="nav-link tittle__links" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="About.html" target="_blank">Nosotras</a>
+          <a class="nav-link tittle__links" href="About.html" >Nosotras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Instructoras</a>
+          <a class="nav-link tittle__links" href="instructoras.html">Instructoras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Clases</a>
+          <a class="nav-link tittle__links" href="Clases.html">Clases</a>
         </li>
         <li class="nav-item">
           <a class="nav-link tittle__links" href="Contacto.html">Contacto</a>
