--- a/Clases.html
+++ b/Clases.html
@@ -22,7 +22,7 @@
           <a class="nav-link tittle__links" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="About.html" target="_blank">Nosotras</a>
+          <a class="nav-link tittle__links" href="About.html" >Nosotras</a>
         </li>
         <li class="nav-item">
           <a class="nav-link tittle__links" href="#">Instructoras</a>
@@ -61,6 +61,46 @@
   </div>
   </header>
 
+<section class="courses ">
+
+  <div class="container">
+    <h4>Taharoa te Invita</h4>
+    <div class="col-md-12 text-center courses__info ">
+        <p>
+          <li>Si te gusta Bailar y divertirte</li>
+          <li>Si tocas guitarra y quieres compartir</li>
+          <li>tocas percusion o ukelele </li>
+
+          <li>Animate grupo Taharoa musica danza y rapa nui
+             busca nuevos integrantes.</li></p>
+          <li>escribenos y ven a disfrutar en un grato ambiente</li>
+          <li>Estamos ubicadas en</li>
+          <li>Centro cultural Anita Gonzalez</li>
+          <li>Direccion Av Laguna sur 8708</li>
+          <li>Pudahuel</li>
+      </div>
+      </div>
+      <div class="container">
+      <div class="row py-4 text-center">
+      <div class="col-md-3 courses__galery">
+        <img src="assets/images/clase2.jpg" alt="">
+      </div>
+      <div class="col-md-3 courses__galery">
+        <img src="assets/images/clase2.jpg" alt="">
+      </div>
+      <div class="col-md-3 courses__galery">
+          <img src="assets/images/clase3.jpg" alt="">
+      </div>
+      <div class="col-md-3 courses__galery">
+          <img src="assets/images/clase2.jpg" alt="">
+      </div>
+    </div>
+    </div>
+  <div>
+    <h2>¿Donde estamos ubicadas?</h2>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3328.6310868139894!2d-70.76169258531604!3d-33.45891668077154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c3abee933cd7%3A0xb3f31fe50ab7ae75!2sAv.%20Laguna%20Sur%208708%2C%20Pudahuel%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1578204507007!5m2!1ses!2scl" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  </div>
+</section>
 
 
 
