--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <a class="nav-link tittle__links" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="About.html" target="_blank">Nosotras</a>
+          <a class="nav-link tittle__links" href="About.html">Nosotras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Instructoras</a>
+          <a class="nav-link tittle__links" href="instructoras.html">Instructoras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Clases</a>
+          <a class="nav-link tittle__links" href="Clases.html">Clases</a>
         </li>
         <li class="nav-item">
         <a class="nav-link tittle__links" href="Contacto.html">Contacto</a>
@@ -75,41 +75,43 @@
   <section class="Instructora  ">
     <h2>Nuestras Instructoras</h2>
 <div class=" container">
-    <div class="card-deck pt-3 pb-3 ">
-  <div class="card">
+    <div class="card-deck pt-3 pb-3 Instructora__sizeCard ">
+  <div class="card ">
     <img src="assets/images/solecard2.jpg" class="card-img-top " alt="...">
+
     <div class="card-body">
       <h5 class="card-title text-center">Soledad</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer text-center">
-        <a href="#"><button class="button3" type="button" name="button">Visita mi perfil</button> </a>
+        <a href="instructoras.html"><button class="button3" type="button" name="button">Visita mi perfil</button> </a>
     </div>
-  </div>
-  <div class="card">
-    <img src="assets/images/solecard2.jpg" class="card-img-top" alt="...">
+    </div>
+
+  <div class="card ">
+    <img src="assets/images/katya.jpg" class="card-img-top" alt="...">
+
     <div class="card-body">
       <h5 class="card-title text-center">Katya</h5>
       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
     </div>
     <div class="card-footer text-center">
-        <a href="#"> <button class="button3" type="button" name="button">Visita mi perfil </button> </a>
+        <a href="instructoras.html"> <button class="button3" type="button" name="button">Visita mi perfil </button> </a>
     </div>
-  </div>
-  <div class="card">
-    <img src="assets/images/solecard2.jpg" class="card-img-top" alt="...">
+    </div>
+
+  <div class="card ">
+    <img src="assets/images/vane.jpg" class="card-img-top rotate" alt="...">
     <div class="card-body">
-      <h5 class="card-title text-center">Vannesa</h5>
+      <h5 class="card-title text-center">Vanesa</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
     </div>
     <div class="card-footer text-center ">
-      <a href="#"><button class="button3" type="button" name="button">Visita mi perfil</button> </a>
+      <a href="instructoras.html"><button class="button3" type="button" name="button">Visita mi perfil</button> </a>
     </div>
   </div>
 </div>
 </div>
-
-
   </section>
 
   <section class="PhotographyGalery">
@@ -153,7 +155,7 @@
         <div class="row">
 
             <div class="col-md-6 cursos__imgs">
-                <img src="assets/images/solecard.jpg" alt="" class="img-fluid">
+                <img src="assets/images/solecard2.jpg" alt="" class="img-fluid">
             </div>
 
             <div class="col-md-6">
