--- a/Contacto.html
+++ b/Contacto.html
@@ -25,10 +25,10 @@
           <a class="nav-link tittle__links" href="About.html" target="_blank">Nosotras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Instructoras</a>
+          <a class="nav-link tittle__links" href="instructoras.html">Instructoras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Clases</a>
+          <a class="nav-link tittle__links" href="Clases.html">Clases</a>
         </li>
         <li class="nav-item">
         <a class="nav-link tittle__links" href="Contacto.html">Contacto</a>
