--- a/instructoras.html
+++ b/instructoras.html
@@ -22,13 +22,13 @@
           <a class="nav-link tittle__links" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="About.html" target="_blank">Nosotras</a>
+          <a class="nav-link tittle__links" href="About.html" >Nosotras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Instructoras</a>
+          <a class="nav-link tittle__links" href="instructoras.html">Instructoras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Clases</a>
+          <a class="nav-link tittle__links" href="Clases.html">Clases</a>
         </li>
         <li class="nav-item">
         <a class="nav-link tittle__links" href="Contacto.html">Contacto</a>
@@ -60,26 +60,114 @@
     </a>
   </div>
   </header>
+<main>
+
+<section class="instructoras">
+<div class=" container py-5">
+  <div class="card-deck">
+    <div class="card ">
+      <img src="assets/images/solemodal.jpg" class="card-img-top" alt="...">
+      <div class="card-body text-center">
+        <a href="#" data-toggle="modal" data-target="#sole"> <button type="button" class="button_perfilModal" name="button">Solange</button> </a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="assets/images/solemodal.jpg" class="card-img-top" alt="...">
+      <div class="card-body text-center">
+        <a href="#" data-toggle="modal" data-target="#katya" > <button type="button" class="button_perfilModal" name="button">Katya</button> </a>
+      </div>
+    </div>
+    <div class="card">
+      <img src="assets/images/solemodal.jpg" class="card-img-top" alt="...">
+      <div class="card-body text-center">
+        <a href="#" data-toggle="modal" data-target="#vane"> <button type="button" class="button_perfilModal" name="button"> Vannesa </button> </a>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+<div class="modal fade" id="sole" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- <img src="assets/img/cuppon.png" class="img-fluid my-3" alt="cuppon"> -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+</div>
+
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="katya" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- <img src="assets/img/cuppon.png" class="img-fluid my-3" alt="cuppon"> -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+</div>
+
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="vane" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <!-- <img src="assets/img/cuppon.png" class="img-fluid my-3" alt="cuppon"> -->
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+</div>
+
+    </div>
+  </div>
+</div>
 
 
 
-
-
-
-
-
-
-
-
-
-  <section class="form">
+<section class="form">
 
   <div class="form__contacto ">
+    <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
     <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
   </div>
 
   </section>
-
+</main>
   <footer class="footer">
     <div class="footer__icon">
       <a href="https://www.instagram.com/taharoa_/" target="_blank"><i class="fab fa-instagram fa-3x footer__icon--color "></i></a>
@@ -87,40 +175,6 @@
     </div>
 
   </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <script
