--- a/Clases.html
+++ b/Clases.html
@@ -96,10 +96,11 @@
       </div>
     </div>
     </div>
-  <div>
+  <div class="container py-4">
     <h2>¿Donde estamos ubicadas?</h2>
+    <p class="text-center colorLetra py-2 ">Direccion Av Laguna sur 8708</p>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3328.6310868139894!2d-70.76169258531604!3d-33.45891668077154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c3abee933cd7%3A0xb3f31fe50ab7ae75!2sAv.%20Laguna%20Sur%208708%2C%20Pudahuel%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1578204507007!5m2!1ses!2scl" width="100%" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-  </div>
+    </div>
 </section>
 
 
