--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="row">
 
             <div class="col-md-6 cursos__imgs">
-                <img src="assets/images/solecard2.jpg" alt="" class="img-fluid">
+                <img src="assets/images/ensayo.jpg" alt="" class="img-fluid">
             </div>
 
             <div class="col-md-6">
