--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <article class="About">
     <div class="container">
       <h1 class="scale-in-left">TAHAROA   Nuestra Historia</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Taharoa, es un grupo que se crea el año 1999, con la finalidad de dar a conocer la música y danza de la cultura Chilena “Rapanui”, de la Isla de Pascua, perteneciente a la a la V Región de Valparaíso, como una agrupación folclórica con el objetivo de desarrollar muestras de la cultura, trajes, baile, música, costumbres e historia, en la Región de Santiago, como muestra de la danza tradicional folclórica chilena, así dar a conocer y proteger la cultura Rapanui...</p>
     </div>
 
     <div class="About__button container">
@@ -160,11 +160,18 @@
 
             <div class="col-md-6">
               <div class="cursos__contents">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                    <p>Si te gusta Bailar y divertirte
+                      Si tocas guitarra y quieres compartir
+                      tocas percusion o ukelele
+                      Animate grupo Taharoa musica danza y rapa nui busca nuevos integrantes.</p>
               </div>
             </div>
 
         </div>
+            <div class="cursos__button">
+          <a href="Clases.html">  <button class="buttonclases" type="button" name="button">Nuestras clases</button></a>
+            </div>
+
       </div>
   </section>
 
