--- a/instructoras.html
+++ b/instructoras.html
@@ -72,13 +72,13 @@
       </div>
     </div>
     <div class="card">
-      <img src="assets/images/solemodal.jpg" class="card-img-top" alt="...">
+      <img src="assets/images/katyamodal.jpg" class="card-img-top" alt="...">
       <div class="card-body text-center">
         <a href="#" data-toggle="modal" data-target="#katya" > <button type="button" class="button_perfilModal" name="button">Katya</button> </a>
       </div>
     </div>
     <div class="card">
-      <img src="assets/images/solemodal.jpg" class="card-img-top" alt="...">
+      <img src="assets/images/vannemodal.jpg" class="card-img-top" alt="...">
       <div class="card-body text-center">
         <a href="#" data-toggle="modal" data-target="#vane"> <button type="button" class="button_perfilModal" name="button"> Vannesa </button> </a>
       </div>
