--- a/About.html
+++ b/About.html
@@ -84,9 +84,10 @@
 
   <section class="form">
 
-    <div class="form__contacto ">
-      <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
-    </div>
+  <div class="form__contacto ">
+    <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
+    <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+  </div>
 
   </section>
 
