--- a/Clases.html
+++ b/Clases.html
@@ -25,10 +25,10 @@
           <a class="nav-link tittle__links" href="About.html" >Nosotras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Instructoras</a>
+          <a class="nav-link tittle__links" href="instructoras.html">Instructoras</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link tittle__links" href="#">Clases</a>
+          <a class="nav-link tittle__links" href="Clases.html">Clases</a>
         </li>
         <li class="nav-item">
         <a class="nav-link tittle__links" href="Contacto.html">Contacto</a>
@@ -103,23 +103,14 @@
     </div>
 </section>
 
+<section class="form">
 
+<div class="form__contacto ">
+  <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
+  <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+</div>
 
-
-
-
-
-
-
-
-
-  <section class="form">
-
-  <div class="form__contacto ">
-    <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
-  </div>
-
-  </section>
+</section>
 
   <footer class="footer">
     <div class="footer__icon">
@@ -128,43 +119,7 @@
     </div>
 
   </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script
+<script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
