--- a/Contacto.html
+++ b/Contacto.html
@@ -136,13 +136,14 @@
 
 
 
-  <section class="form">
+<section class="form">
 
-  <div class="form__contacto ">
-    <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
-  </div>
+<div class="form__contacto ">
+  <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
+  <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+</div>
 
-  </section>
+</section>
 
   <footer class="footer">
     <div class="footer__icon">
