--- a/Clases.html
+++ b/Clases.html
@@ -82,16 +82,16 @@
       </div>
       <div class="container">
       <div class="row py-4 text-center">
-      <div class="col-md-3 courses__galery">
+      <div class="col-md-3 py-2 courses__galery">
         <img src="assets/images/clase2.jpg" alt="">
       </div>
-      <div class="col-md-3 courses__galery">
+      <div class="col-md-3 py-2 courses__galery">
         <img src="assets/images/clase2.jpg" alt="">
       </div>
-      <div class="col-md-3 courses__galery">
+      <div class="col-md-3 py-2 courses__galery">
           <img src="assets/images/clase3.jpg" alt="">
       </div>
-      <div class="col-md-3 courses__galery">
+      <div class="col-md-3 py-2 courses__galery">
           <img src="assets/images/clase2.jpg" alt="">
       </div>
     </div>
