--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h2>Nuestras Instructoras</h2>
 <div class=" container">
     <div class="card-deck pt-3 pb-3 Instructora__sizeCard ">
-  <div class="card ">
+  <div class="card col-xs-12">
     <img src="assets/images/solecard2.jpg" class="card-img-top " alt="...">
 
     <div class="card-body">
@@ -88,7 +88,7 @@
     </div>
     </div>
 
-  <div class="card ">
+  <div class="card col-xs-12">
     <img src="assets/images/katya.jpg" class="card-img-top" alt="...">
 
     <div class="card-body">
@@ -100,7 +100,7 @@
     </div>
     </div>
 
-  <div class="card ">
+  <div class="card col-xs-12">
     <img src="assets/images/vane.jpg" class="card-img-top rotate" alt="...">
     <div class="card-body">
       <h5 class="card-title text-center">Vanesa</h5>
@@ -118,29 +118,29 @@
     <div class="container py-5">
       <h3>GALERIA FOTOGRAFICA</h3>
       <div class="row py-3">
-        <div class="col-md-4 PhotographyGalery__presentaciones ">
+        <div class="col-md-4  py-2 PhotographyGalery__presentaciones ">
 
           <img src="assets/images/pareja.jpg" alt="">
         </div>
-        <div class="col-md-4 PhotographyGalery__presentaciones">
+        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
 
           <img src="assets/images/baile.jpg" alt="">
         </div>
-        <div class="col-md-4 PhotographyGalery__presentaciones">
+        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
 
           <img src="assets/images/chicas.jpg" alt="">
         </div>
       </div>
       <div class="row py-3">
-        <div class="col-md-4 PhotographyGalery__presentaciones">
+        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
 
           <img src="assets/images/chicas2.jpg" alt="">
         </div>
-        <div class="col-md-4 PhotographyGalery__presentaciones">
+        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
 
           <img src="assets/images/chicas3.jpg" alt="">
         </div>
-        <div class="col-md-4 PhotographyGalery__presentaciones">
+        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
 
           <img src="assets/images/baile.jpg" alt="">
         </div>
