--- a/instructoras.html
+++ b/instructoras.html
@@ -65,19 +65,19 @@
 <section class="instructoras">
 <div class=" container py-5">
   <div class="card-deck">
-    <div class="card ">
+    <div class="card col-xs-12 ">
       <img src="assets/images/solemodal.jpg" class="card-img-top" alt="...">
       <div class="card-body text-center">
         <a href="#" data-toggle="modal" data-target="#sole"> <button type="button" class="button_perfilModal" name="button">Solange</button> </a>
       </div>
     </div>
-    <div class="card">
+    <div class="card col-xs-12">
       <img src="assets/images/katyamodal.jpg" class="card-img-top" alt="...">
       <div class="card-body text-center">
         <a href="#" data-toggle="modal" data-target="#katya" > <button type="button" class="button_perfilModal" name="button">Katya</button> </a>
       </div>
     </div>
-    <div class="card">
+    <div class="card col-xs-12">
       <img src="assets/images/vannemodal.jpg" class="card-img-top" alt="...">
       <div class="card-body text-center">
         <a href="#" data-toggle="modal" data-target="#vane"> <button type="button" class="button_perfilModal" name="button"> Vannesa </button> </a>
