--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <img src="assets/images/solecard2.jpg" class="card-img-top " alt="...">
 
     <div class="card-body">
-      <h5 class="card-title text-center">Soledad</h5>
+      <h5 class="card-title text-center">Solange</h5>
       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
     </div>
     <div class="card-footer text-center">
