pagina home lista

--- a/instructoras.html
+++ b/instructoras.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light   ">
+    <nav class="navbar navbar-expand-lg bg-nav  ">
     <a class="navbar-brand ml-5 tittle__logo scale-in-left  " href="index.html">TAHAROA</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto mr-5 ">
         <li class="nav-item active">
-          <a class="nav-link tittle__links" href="index.html"> Inicio <span class="sr-only">(current)</span></a>
+          <a class="nav-link tittle__links" href="inicio.html"> Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link tittle__links" href="About.html" >Nosotras</a>
@@ -38,27 +38,10 @@
   </nav>
 
   <header>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active ">
-        <img  src="assets/images/chicas3.jpg" class="d-block  " alt="...">
-      </div>
-      <div class="carousel-item ">
-        <img  src="assets/images/baile.jpg" class="d-block " alt="...">
-      </div>
-      <div class="carousel-item ">
-        <img  src="assets/images/chicas.jpg" class="d-block  " alt="...">
-      </div>
+    <div class="headerinicio">
+      <h1 class="headerinicio__TituloPrincipal">TAHAROA</h1>
+      <h2 class="headerinicio__TituloSecundario" >Escuela de danza Rapa nui</h2>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Anterior</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Siguiente</span>
-    </a>
-  </div>
   </header>
 <main>
 
