arreglando page_inicio

--- a/inicio.html
+++ b/inicio.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="About__button container">
-    <a href="about.html" target="_blank"> <button class="button2"  type="button " name="button">Ir a nuestra historia</button></a>
+    <a href="about.html" class="button2" > Ir a nuestra historia</a>
     </div>
   </article>
 
