pagina instructora lista

--- a/Clases.html
+++ b/Clases.html
@@ -90,7 +90,7 @@
 
 <div class="form__contacto ">
   <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
-  <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+  <a href="Contacto.html" class="button1 "> Contactanos</a>
 </div>
 
 </section>
