--- a/inicio.html
+++ b/inicio.html
@@ -49,89 +49,23 @@
       <h2 class="">TAHAROA   Nuestra Historia</h2>
           <p>Taharoa, es un grupo que se crea el año 1999, con la finalidad de dar a conocer la música y danza de la cultura Chilena “Rapanui”, de la Isla de Pascua, perteneciente a la a la V Región de Valparaíso, como una agrupación folclórica con el objetivo de desarrollar muestras de la cultura, trajes, baile, música, costumbres e historia, en la Región de Santiago, como muestra de la danza tradicional folclórica chilena, así dar a conocer y proteger la cultura Rapanui...</p>
     </div>
-
     <div class="About__button container">
     <a href="about.html" class="button2" > Ir a nuestra historia</a>
     </div>
   </article>
-
+  <hr><hr>
   <section class="Instructora  ">
     <h2>Nuestras Instructoras</h2>
-<div class=" container">
-    <div class="card-deck pt-3 pb-3 Instructora__sizeCard ">
-  <div class="card col-xs-12">
-    <img src="assets/images/solecard2.jpg" class="card-img-top " alt="...">
-
-    <div class="card-body">
-      <h5 class="card-title text-center">Solange</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-    <div class="card-footer text-center">
-        <a href="instructoras.html"><button class="button3" type="button" name="button">Visita mi perfil</button> </a>
-    </div>
-    </div>
-
-  <div class="card col-xs-12">
-    <img src="assets/images/katya.jpg" class="card-img-top" alt="...">
-
-    <div class="card-body">
-      <h5 class="card-title text-center">Katya</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-    </div>
-    <div class="card-footer text-center">
-        <a href="instructoras.html"> <button class="button3" type="button" name="button">Visita mi perfil </button> </a>
-    </div>
-    </div>
-
-  <div class="card col-xs-12">
-    <img src="assets/images/vane.jpg" class="card-img-top rotate" alt="...">
-    <div class="card-body">
-      <h5 class="card-title text-center">Vanesa</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-    </div>
-    <div class="card-footer text-center ">
-      <a href="instructoras.html"><button class="button3" type="button" name="button">Visita mi perfil</button> </a>
-    </div>
-  </div>
+<div class=" container Instructora__descripcion ">
+    <li>¿Quieres saber mas de nuestras instructoras?</li>
+    <li>Descrubelas</li>
+<div class="Instructora__boton pt-3">
+<a href="instructoras.html" class="buttonInicioIntructoras text-center">Nuestras chicas</a>
 </div>
 </div>
   </section>
 
-  <section class="PhotographyGalery">
-    <div class="container py-5">
-      <h3>GALERIA FOTOGRAFICA</h3>
-      <div class="row py-3">
-        <div class="col-md-4  py-2 PhotographyGalery__presentaciones ">
-
-          <img src="assets/images/pareja.jpg" alt="">
-        </div>
-        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
-
-          <img src="assets/images/baile.jpg" alt="">
-        </div>
-        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
-
-          <img src="assets/images/chicas.jpg" alt="">
-        </div>
-      </div>
-      <div class="row py-3">
-        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
-
-          <img src="assets/images/chicas2.jpg" alt="">
-        </div>
-        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
-
-          <img src="assets/images/chicas3.jpg" alt="">
-        </div>
-        <div class="col-md-4  py-2 PhotographyGalery__presentaciones">
-
-          <img src="assets/images/baile.jpg" alt="">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="cursos text-center py-5">
+    <section class="cursos text-center py-5">
     <h4>Nuestras clases</h4>
 
       <div class="container my-5">
@@ -152,7 +86,7 @@
 
         </div>
             <div class="cursos__button">
-          <a href="Clases.html">  <button class="buttonclases" type="button" name="button">Nuestras clases</button></a>
+          <a href="Clases.html"  class="buttonclases">Nuestras clases</a>
             </div>
 
       </div>
@@ -162,7 +96,7 @@
 
   <div class="form__contacto ">
     <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
-    <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+    <a href="Contacto.html" class="button1">  Contactanos</a>
   </div>
 
   </section>
