--- a/instructoras.html
+++ b/instructoras.html
@@ -45,30 +45,29 @@
   </header>
 <main>
 
-<section class="instructoras">
+<section class="instructoras bg_instructoras">
 <div class=" container py-5">
-  <div class="card-deck">
-    <div class="card col-xs-12 ">
-      <img src="assets/images/solemodal.jpg" class="card-img-top" alt="...">
+  <div class="card-deck margen_cards">
+    <div class="card hoover col-xs-12  ">
+      <img src="assets/images/solemodal3.jpg" class="card-img-top img-fluid" alt="...">
       <div class="card-body text-center">
         <a href="#" data-toggle="modal" data-target="#sole"> <button type="button" class="button_perfilModal" name="button">Solange</button> </a>
       </div>
     </div>
-    <div class="card col-xs-12">
-      <img src="assets/images/katyamodal.jpg" class="card-img-top" alt="...">
+    <div class="card hoover col-xs-12 ">
+      <img src="assets/images/katyamodal3.jpg" class="card-img-top img-fluid" alt="...">
       <div class="card-body text-center">
         <a href="#" data-toggle="modal" data-target="#katya" > <button type="button" class="button_perfilModal" name="button">Katya</button> </a>
       </div>
     </div>
-    <div class="card col-xs-12">
-      <img src="assets/images/vannemodal.jpg" class="card-img-top" alt="...">
+    <div class="card hoover col-xs-12 ">
+      <img src="assets/images/vannemodal3.jpg" class="card-img-top img-fluid" alt="...">
       <div class="card-body text-center">
         <a href="#" data-toggle="modal" data-target="#vane"> <button type="button" class="button_perfilModal" name="button"> Vannesa </button> </a>
       </div>
     </div>
   </div>
 </div>
-</section>
 
 <div class="modal fade" id="sole" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -140,14 +139,11 @@
   </div>
 </div>
 
-
-
-<section class="form">
-
-  <div class="form__contacto ">
+  <div class="BotonContacto_instructora ">
     <h6>¿Quieres Aprender? Escribenos y disfruta</h6>
-    <a href="Contacto.html"> <button class="button1 " type="button" name="button">  Contactanos</button></a>
+    <a href="Contacto.html" class="buttonContactoInstructora"> Contactanos</a>
   </div>
+
 
   </section>
 </main>
