actualizando page_instructora

--- a/instructoras.html
+++ b/instructoras.html
@@ -47,23 +47,24 @@
 
 <section class="instructoras bg_instructoras">
 <div class=" container py-5">
+      <h3 class="titleCards">Conoce a nuestras instructoras</h3>
   <div class="card-deck margen_cards">
     <div class="card hoover col-xs-12  ">
       <img src="assets/images/solemodal3.jpg" class="card-img-top img-fluid" alt="...">
       <div class="card-body text-center">
-        <a href="#" data-toggle="modal" data-target="#sole"> <button type="button" class="button_perfilModal" name="button">Solange</button> </a>
+        <a href="#" data-toggle="modal" data-target="#sole"  class="button_perfilModal">Solange </a>
       </div>
     </div>
     <div class="card hoover col-xs-12 ">
       <img src="assets/images/katyamodal3.jpg" class="card-img-top img-fluid" alt="...">
       <div class="card-body text-center">
-        <a href="#" data-toggle="modal" data-target="#katya" > <button type="button" class="button_perfilModal" name="button">Katya</button> </a>
+      <a href="#" data-toggle="modal" data-target="#katya"  class="button_perfilModal">Katya </a>
       </div>
     </div>
     <div class="card hoover col-xs-12 ">
       <img src="assets/images/vannemodal3.jpg" class="card-img-top img-fluid" alt="...">
       <div class="card-body text-center">
-        <a href="#" data-toggle="modal" data-target="#vane"> <button type="button" class="button_perfilModal" name="button"> Vannesa </button> </a>
+        <a href="#" data-toggle="modal" data-target="#vane" class="button_perfilModal">  Vannesa  </a>
       </div>
     </div>
   </div>
@@ -120,6 +121,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
+        <p class="text-center">Vanne</p>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
